--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -1,6 +1,6 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= @GENCL@ docs sdl libs ai graphics dialogs widgets actions unix tools 
+SUBDIRS 		= @GENCL@ docs libs sdl ai graphics dialogs widgets actions unix tools 
 
 EXTRA_DIST 		= *.cpp *.h *.inc
 
