--- a/source/sdl/Makefile.am
+++ b/source/sdl/Makefile.am
@@ -2,12 +2,14 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
 AM_CXXFLAGS = @SDL_CFLAGS@  @SIGC_CFLAGS@
-AM_CFLAGS   = @SDL_CFLAGS@ 
+AM_CFLAGS   = @SDL_CFLAGS@  
 
-noinst_LTLIBRARIES	= libsdl.la
+noinst_LTLIBRARIES	= libsdl.la libsdlsnd.la
 
-libsdl_la_SOURCES 	= sound.cpp graphics.cpp events.cpp 
-libsdl_la_LIBADD	= @SDL_LIBS@ -lSDL_image -lSDL_mixer -ljpeg -lSDL_sound
+libsdl_la_SOURCES 	= graphics.cpp events.cpp 
+libsdl_la_LIBADD	= @SDL_LIBS@ -lSDL_image -ljpeg 
 
+libsdlsnd_la_SOURCES 	= sound.cpp  
+libsdlsnd_la_LIBADD	= @SDL_LIBS@ -lSDL_mixer @SDL_SOUND_LIB@ 
 
 
