--- a/Makefile.in
+++ b/Makefile.in
@@ -150,13 +150,21 @@ RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
+SDL_SOUND_LIB = @SDL_SOUND_LIB@
 SET_MAKE = @SET_MAKE@
 SGML2MAN = @SGML2MAN@
 SHELL = @SHELL@
 SIGC_CFLAGS = @SIGC_CFLAGS@
 SIGC_LIBS = @SIGC_LIBS@
 STRIP = @STRIP@
+SdlSoundDir = @SdlSoundDir@
 VERSION = @VERSION@
+VORBISENC_LIBS = @VORBISENC_LIBS@
+VORBISFILE_LIBS = @VORBISFILE_LIBS@
+VORBIS_CFLAGS = @VORBIS_CFLAGS@
+VORBIS_LIBS = @VORBIS_LIBS@
+abs_top_builddir = @abs_top_builddir@
+abs_top_srcdir = @abs_top_srcdir@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_F77 = @ac_ct_F77@
@@ -208,7 +216,7 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = source data doc
+SUBDIRS = source data doc installer
 EXTRA_DIST = asc.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm
 AUTOMAKE_OPTIONS = foreign
 all: config.h
@@ -651,13 +659,16 @@ uninstall-info: uninstall-info-recursive
 
 
 htmldoc:
-	cd source ; make htmldoc
+	cd source && make htmldoc
 
 installer: 
-	cd $(top_srcdir)/installer && makensis pbp.nsi
+	cd $(top_srcdir)/installer && make installer
+
+tarball:
+	cd $(top_srcdir)/installer && make tarball
 
 pbpinstaller: 
-	cd $(top_srcdir)/installer && makensis pbp.nsi
+	cd $(top_srcdir)/installer && make pbpinstaller 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
